Setup a CI pipeline name to fix name error

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,4 @@
-name: 🧪 CI: Test + Coverage + Mutation
-
+name: CI Test [Mutation, coverage, integration and more]
 on:
   push:
     branches: [main]
