--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,5 @@
-name: CI Test [Mutation, coverage, integration and more]
+name: CI Test [Mutation, Coverage, Integration and More]
+
 on:
   push:
     branches: [main]
@@ -10,11 +11,32 @@ jobs:
     outputs:
       sha: ${{ github.sha }}
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v3
+      - name: ⬇️ Checkout
+        uses: actions/checkout@v4
+
+      - name: 🧱 Make gradlew executable
+        run: chmod +x gradlew
+
+      - name: ☕ Set up Java 21
+        id: setup-java
+        uses: actions/setup-java@v3
         with:
           java-version: '21'
           distribution: 'temurin'
+
+      - name: 💾 Cache Gradle
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: gradle-${{ runner.os }}-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: gradle-${{ runner.os }}-
+
+      - name: 🧠 Verify Java and Gradle
+        run: |
+          java -version
+          ./gradlew --version
 
   unit-tests:
     needs: setup
@@ -23,8 +45,18 @@ jobs:
     name: 🧪 Unit Tests
     steps:
       - uses: actions/checkout@v4
-      - run: ./gradlew test -Djunit.jupiter.tags.exclude=integration
-      - run: ./gradlew jacocoTestReport
+      - run: chmod +x gradlew
+      - uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+
+      - name: Run Unit Tests
+        run: ./gradlew test -Djunit.jupiter.tags.exclude=integration
+
+      - name: 📊 Generate JaCoCo Report
+        run: ./gradlew jacocoTestReport
+
       - name: ☂️ Generate Layered Coverage Badges
         uses: cicirello/jacoco-badge-generator@v2
         with:
@@ -34,6 +66,7 @@ jobs:
             io.github.sardul3.application.*
             io.github.sardul3.adapter.*
           badge-directory: .github/badges
+
       - uses: actions/upload-artifact@v4
         with:
           name: unit-test-report
@@ -63,7 +96,15 @@ jobs:
       SPRING_DATASOURCE_PASSWORD: test
     steps:
       - uses: actions/checkout@v4
-      - run: ./gradlew integrationTest
+      - run: chmod +x gradlew
+      - uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+
+      - name: Run Integration Tests
+        run: ./gradlew integrationTest
+
       - uses: actions/upload-artifact@v4
         with:
           name: integration-test-report
@@ -76,14 +117,26 @@ jobs:
     name: 🔬 PIT Mutation Tests
     steps:
       - uses: actions/checkout@v4
+      - run: chmod +x gradlew
+      - uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+
       - name: 🧬 Run PIT
         run: ./gradlew pitest
+
       - name: 📛 Mutation Badge
         run: |
-          MUTATION_RATE=$(grep -oP 'mutationCoverage = \K[0-9\.]+' build/reports/pitest/mutation-report.json)
-          echo "Mutation coverage: $MUTATION_RATE%"
           mkdir -p .github/badges
-          echo "![mutation](https://img.shields.io/badge/Mutation-${MUTATION_RATE}%25-brightgreen)" > .github/badges/mutation-badge.md
+          if [[ -f build/reports/pitest/mutation-report.json ]]; then
+            RATE=$(grep -oP 'mutationCoverage\s*=\s*\K[0-9\.]+' build/reports/pitest/mutation-report.json || echo "0")
+            echo "Mutation coverage: $RATE%"
+            echo "![mutation](https://img.shields.io/badge/Mutation-${RATE}%25-brightgreen)" > .github/badges/mutation-badge.md
+          else
+            echo "![mutation](https://img.shields.io/badge/Mutation-unknown-lightgrey)" > .github/badges/mutation-badge.md
+          fi
+
       - uses: actions/upload-artifact@v4
         with:
           name: mutation-test-report
@@ -95,10 +148,12 @@ jobs:
     name: 🏁 Publish Badges to GitHub Pages
     steps:
       - uses: actions/checkout@v4
+
       - name: Copy badge files
         run: |
           mkdir -p badges
           cp -r .github/badges/* badges/
+
       - uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
