--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
         id: jacoco
         uses: cicirello/jacoco-badge-generator@v2
         with:
-          badges-directory: badges
+          badges-directory: .github/badges
           generate-branches-badge: true
           generate-summary: true
           jacoco-csv-file: build/reports/jacoco/test/jacocoTestReport.csv
