--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,6 +86,7 @@ jobs:
         continue-on-error: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   mutation-tests:
     needs: setup
     runs-on: ubuntu-latest
@@ -120,6 +121,11 @@ jobs:
               RATE="0.00"
             fi
 
+            COLOR="brightgreen"
+            if (( $(echo "$RATE < 90" | bc -l) )); then COLOR="yellow"; fi
+            if (( $(echo "$RATE < 70" | bc -l) )); then COLOR="orange"; fi
+            if (( $(echo "$RATE < 50" | bc -l) )); then COLOR="red"; fi
+
             # Create summary
             {
               echo "### PIT Mutation Summary"
@@ -130,11 +136,14 @@ jobs:
               echo "- 🎯 Mutation Score: **$RATE%**"
             } > "$SUMMARY_DIR/summary.md"
 
-            # Create badge
-            echo "![mutation](https://img.shields.io/badge/Mutation-${RATE//./%2E}%25-brightgreen)" > "$BADGE_DIR/mutation-badge.md"
+            # Generate SVG badge
+            BADGE_PATH="$BADGE_DIR/mutation.svg"
+            echo '<?xml version="1.0" encoding="UTF-8"?>' > $BADGE_PATH
+            echo "<svg xmlns='http://www.w3.org/2000/svg' width='120' height='20'><rect width='120' height='20' fill='#555'/><rect x='60' width='60' height='20' fill='$COLOR'/><text x='30' y='14' fill='#fff' font-family='Verdana' font-size='11'>mutation</text><text x='80' y='14' fill='#000' font-family='Verdana' font-size='11'>$RATE%</text></svg>" >> $BADGE_PATH
+
           else
             echo "No mutation-report.xml found" > "$SUMMARY_DIR/summary.md"
-            echo "![mutation](https://img.shields.io/badge/Mutation-unknown-lightgrey)" > "$BADGE_DIR/mutation-badge.md"
+            echo '<svg xmlns="http://www.w3.org/2000/svg" width="120" height="20"><rect width="120" height="20" fill="#9f9f9f"/><text x="10" y="14" fill="#fff" font-family="Verdana" font-size="11">Mutation Unknown</text></svg>' > "$BADGE_DIR/mutation.svg"
           fi
 
       - uses: actions/upload-artifact@v4
@@ -145,7 +154,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: mutation-badge
-          path: .github/badges/mutation-badge.md
+          path: .github/badges/mutation.svg
 
   store-badges:
     needs: [mutation-tests]
