Add steps to generate mutation badge and show it in readme

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,8 @@
 name: CI Test [Mutation, Coverage, Integration and More]
 
 on:
-#  push:
-#    branches: [main]
+  #  push:
+  #    branches: [main]
   workflow_dispatch:
 
 jobs:
@@ -87,6 +87,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+
   mutation-tests:
     needs: setup
     runs-on: ubuntu-latest
@@ -94,7 +95,9 @@ jobs:
     name: 🔬 PIT Mutation Tests
     steps:
       - uses: actions/checkout@v4
+
       - run: chmod +x gradlew
+
       - uses: actions/setup-java@v3
         with:
           java-version: '21'
@@ -103,30 +106,30 @@ jobs:
       - name: 🧬 Run PIT
         run: ./gradlew pitest
 
-      - name: 📄 Generate mutation summary and badge
+      - name: 📄 Generate mutation summary and SVG badge
         run: |
           FILE="build/reports/pitest/mutations.xml"
           SUMMARY_DIR="mutation-summary"
           BADGE_DIR=".github/badges"
           mkdir -p "$SUMMARY_DIR" "$BADGE_DIR"
-
+          
           if [[ -f "$FILE" ]]; then
             TOTAL=$(grep -c "<mutation " "$FILE")
             KILLED=$(grep "status='KILLED'" "$FILE" | wc -l)
             SURVIVED=$(grep "status='SURVIVED'" "$FILE" | wc -l)
-
+          
             if [ "$TOTAL" -gt 0 ]; then
               RATE=$(echo "scale=2; ($KILLED / $TOTAL) * 100" | bc)
             else
               RATE="0.00"
             fi
-
-            COLOR="brightgreen"
-            if (( $(echo "$RATE < 90" | bc -l) )); then COLOR="yellow"; fi
-            if (( $(echo "$RATE < 70" | bc -l) )); then COLOR="orange"; fi
-            if (( $(echo "$RATE < 50" | bc -l) )); then COLOR="red"; fi
-
-            # Create summary
+          
+            COLOR="#4c1"
+            TEXT="#ffffff"
+            if (( $(echo "$RATE < 90" | bc -l) )); then COLOR="#dfb317"; TEXT="#000000"; fi
+            if (( $(echo "$RATE < 75" | bc -l) )); then COLOR="#fe7d37"; TEXT="#000000"; fi
+            if (( $(echo "$RATE < 50" | bc -l) )); then COLOR="#e05d44"; TEXT="#ffffff"; fi
+          
             {
               echo "### PIT Mutation Summary"
               echo ""
@@ -135,15 +138,40 @@ jobs:
               echo "- ⚠️ Survived: **$SURVIVED**"
               echo "- 🎯 Mutation Score: **$RATE%**"
             } > "$SUMMARY_DIR/summary.md"
-
-            # Generate SVG badge
-            BADGE_PATH="$BADGE_DIR/mutation.svg"
-            echo '<?xml version="1.0" encoding="UTF-8"?>' > $BADGE_PATH
-            echo "<svg xmlns='http://www.w3.org/2000/svg' width='120' height='20'><rect width='120' height='20' fill='#555'/><rect x='60' width='60' height='20' fill='$COLOR'/><text x='30' y='14' fill='#fff' font-family='Verdana' font-size='11'>mutation</text><text x='80' y='14' fill='#000' font-family='Verdana' font-size='11'>$RATE%</text></svg>" >> $BADGE_PATH
-
+          
+            # Safe way to echo multi-line XML
+            cat <<EOF > "$BADGE_DIR/mutation.svg"
+            <?xml version="1.0" encoding="UTF-8"?>
+          <svg xmlns="http://www.w3.org/2000/svg" width="140" height="20" role="img" aria-label="mutation: ${RATE}%">
+            <linearGradient id="b" x2="0" y2="100%">
+            <stop offset="0" stop-color="#bbb" stop-opacity=".1"/>
+            <stop offset="1" stop-opacity=".1"/>
+            </linearGradient>
+            <mask id="a">
+            <rect width="140" height="20" rx="3" fill="#fff"/>
+            </mask>
+            <g mask="url(#a)">
+            <rect width="75" height="20" fill="#555"/>
+            <rect x="75" width="65" height="20" fill="${COLOR}"/>
+            <rect width="140" height="20" fill="url(#b)"/>
+            </g>
+            <g fill="${TEXT}" text-anchor="middle" font-family="Verdana,Geneva,DejaVu Sans,sans-serif" font-size="11">
+            <text x="38" y="14" dominant-baseline="middle">mutation</text>
+            <text x="105" y="14" dominant-baseline="middle">${RATE}%</text>
+            </g>
+            </svg>
+            EOF
+  
           else
             echo "No mutation-report.xml found" > "$SUMMARY_DIR/summary.md"
-            echo '<svg xmlns="http://www.w3.org/2000/svg" width="120" height="20"><rect width="120" height="20" fill="#9f9f9f"/><text x="10" y="14" fill="#fff" font-family="Verdana" font-size="11">Mutation Unknown</text></svg>' > "$BADGE_DIR/mutation.svg"
+  
+          cat <<EOF > "$BADGE_DIR/mutation.svg"
+          <?xml version="1.0" encoding="UTF-8"?>
+        <svg xmlns="http://www.w3.org/2000/svg" width="140" height="20" role="img" aria-label="mutation: unknown">
+          <rect width="140" height="20" fill="#9f9f9f"/>
+          <text x="70" y="14" fill="#fff" text-anchor="middle" font-family="Verdana,Geneva,DejaVu Sans,sans-serif" font-size="11" dominant-baseline="middle">Mutation Unknown</text>
+          </svg>
+          EOF
           fi
 
       - uses: actions/upload-artifact@v4
@@ -156,32 +184,3 @@ jobs:
           name: mutation-badge
           path: .github/badges/mutation.svg
 
-  store-badges:
-    needs: [mutation-tests]
-    runs-on: ubuntu-latest
-    name: 🗃️ Store Combined Badges
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Download mutation badge
-        uses: actions/download-artifact@v4
-        with:
-          name: mutation-badge
-          path: .github/badges
-
-      - name: Download mutation badge
-        uses: actions/download-artifact@v4
-        with:
-          name: mutation-badge
-          path: mutation-badge-temp
-
-      - name: Copy badge to .github/badges
-        run: |
-          mkdir -p .github/badges
-          cp mutation-badge-temp/mutation-badge.md .github/badges/
-
-      - name: Archive all badges
-        uses: actions/upload-artifact@v4
-        with:
-          name: combined-badges
-          path: .github/badges
